--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -85,6 +85,7 @@
 .dateStyle {
     position: absolute;
     top: 50px;
+    z-index: 2;
 }
 
 .options {
@@ -94,7 +95,8 @@
     color: gray;
     border-radius: 5px;
     -webkit-box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4);
-    box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4)
+    box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4);
+    z-index: 2;
 }
 .optionItem {
     width: 200px;
