--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -22,6 +22,7 @@
 .navButton{
     margin-left: 20px;
     border: none;
+    border-radius: 3px;
     padding: 5px 10px;
     cursor: pointer;
     color: #003580;
